# RAG-DocAnalysis

./: README.md
RAG-DocAnalysis/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
RAG-DocAnalysis/api/: server.py
RAG-DocAnalysis/app/: config.py  evaluation.py  ingestion.py  rag_chain.py  retriever.py
RAG-DocAnalysis/data/chroma/: chroma.sqlite3
RAG-DocAnalysis/docs/: ai_glossary.txt  company_policy.txt  python_guide.txt
RAG-DocAnalysis/ui/: gradio_app.py
