[project]
name = "rag-docanalysis"
version = "0.1.0"
description = "RAG-powered Q&A chatbot with citations, evaluation, FastAPI, and Gradio UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.115.0",
    "gradio>=5.0.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]
